Revert "add permission for lolipop"
This reverts commit 35c7f5a7588024dff19aa6ba8f1f656be6e820bb.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         <!-- This service is only used on devices with API v17+ -->
         <service
             android:name=".MyDaydreamService"
-            android:exported="true"
-            android:permission="android.permission.BIND_DREAM_SERVICE">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.service.dreams.DreamService" />
 
